# mcp-apstra

./: .gitignore  DESIGN.md  FAST_MCP_DOC.md  LLM.md  README.md  auth_test.py  pyproject.toml  server.py
_ref_arch/: 3-stage-clos-leaf-switch.txt  3-stage-clos-spine-switch.txt  5-stage-clos-leaf-switch.txt  5-stage-clos-spine-switch.txt  5-stage-clos-super-spine-switch.txt  APSTRA-REFERENCE-DESIGN-GUIDE.md  border-leaf-DCI-OTT-example.txt  border-leaf-DCI-stitching-example.txt  collapsed-fabric-access-switch.txt  collapsed-fabric-collapsedSpineLeaf-switch.txt  junos-cli-ref-list.txt
config/: instances.yaml.example  settings.py
handlers/: anomalies.py  anomaly_poller.py  bgp.py  blueprint_policy.py  blueprints.py  config_rendering.py  counter_poller.py  design_catalogue.py  interfaces.py  links.py  mtu_check.py  run_commands.py  system_context.py  system_health.py  systems.py  virtual_networks.py
primitives/: anomaly_clustering.py  anomaly_store.py  auth_manager.py  counter_store.py  graph_client.py  live_data_client.py  response_parser.py
tests/: test_anomalies.py  test_anomaly_analytics.py  test_anomaly_timeline.py  test_bgp.py  test_blueprint_policy.py  test_blueprints.py  test_config_rendering.py  test_counter_store.py  test_design_catalogue.py  test_graph_client.py  test_interfaces.py  test_links.py  test_mtu_check.py  test_probes.py  test_reference.py  test_routing_zones.py  test_run_commands.py  test_system_context.py  test_systems.py  test_telemetry.py  test_virtual_networks.py
tools/: anomalies.py  anomaly_analytics.py  anomaly_timeline.py  bgp.py  (+13 more)
